# penta

./: .gitignore  .tmp  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  pyrightconfig.json  run.sh
.claude/skills/logs/: SKILL.md
.github/workflows/: tests.yml
macos/PentaMac/: Package.resolved  Package.swift  README.md
memory/: MEMORY.md  feedback_silent_hooks.md  feedback_testing_worktree.md  project_bidirectional_streaming.md
src/penta/: __init__.py  __main__.py  app.py  app_state.py  input_parser.py  penta.tcss  permissions.py  routing.py  utils.py
src/penta/coordinators/: agent_coordinator.py
src/penta/models/: __init__.py  agent_config.py  agent_status.py  agent_type.py  app_state.py  conversation_info.py  message.py  message_sender.py  pending_plan.py  permission_request.py  tagged_message.py
src/penta/services/: agent_service.py  claude_service.py  cli_env.py  codex_service.py  db.py  db_schema.py  gemini_service.py  permission_server.py  (+1 more)
src/penta_mcp/: server.py
tests/: conftest.py  fakes.py  test_agent_action.py  test_agent_coordinator.py  test_behavioral.py  test_chat_message.py  test_claude_service.py  test_codex_service.py  test_compact.py  test_conversation_list.py  test_conversations.py  test_db.py  test_deferred_hooks.py  test_gemini_service.py  test_input_bar.py  test_input_parser.py  test_mcp_integration.py  test_permission_server.py  test_permissions.py  test_plan_interpolation.py  test_plan_picker.py  test_pyright.py  test_question_picker.py  test_round_limit_screen.py  test_routing.py  test_sender_spoofing.py  test_stream_parser.py
(+21 files in other folders)
