[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "penta"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "textual>=1.0.0",
    "mcp>=1.0.0",
    "aiosqlite>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[project.scripts]
penta = "penta.__main__:main"
penta-mcp-server = "penta_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/penta", "src/penta_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["error"]
